force-app/main/default/objects/Lease_Space__c/Lease_Space__c.object-meta.xml
<CustomObject>
    <label>Lease Space</label>
    <nameField>
        <displayFormat>LS-{0000000}</displayFormat>
        <label>Lease Space Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease Spaces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>