force-app/main/default/objects/Lease_Space__c/fields/Lease__c.field-meta.xml
<CustomField>
    <fullName>Lease__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lease</label>
    <referenceTo>Lease__c</referenceTo>
    <relationshipName>Lease_Units</relationshipName>
    <type>Lookup</type>
</CustomField>