force-app/main/default/objects/Lease_Space__c/fields/Space__c.field-meta.xml
<CustomField>
    <fullName>Space__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Space</label>
    <referenceTo>Space__c</referenceTo>
    <relationshipName>Lease_Units</relationshipName>
    <type>Lookup</type>
</CustomField>