force-app/main/default/objects/Lease_Space__c/fields/Space_Text__c.field-meta.xml
<CustomField>
    <fullName>Space_Text__c</fullName>
    <formula>Space__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Space (Text only do not display)</label>
    <type>Text</type>
</CustomField>